--- a/dropout.ipynb
+++ b/dropout.ipynb
@@ -48,7 +48,11 @@
     "\n",
     "> $y = WX * Ber(p) / p$ in the training phrase, \n",
     "\n",
-    "> $y = WX$ in the test phrase."
+    "> $y = WX$ in the test phrase.\n",
+    "\n",
+    "# Reference\n",
+    "\n",
+    "[cs231n.github.io/neural-networks-2/#reg](cs231n.github.io/neural-networks-2/#reg)"
    ]
   }
  ],
